refactor: 質問の有効化状態の取得と変更を単一のエンドポイントとして切り出す様に
